--- a/app/styles/_date_picker.scss
+++ b/app/styles/_date_picker.scss
@@ -14,13 +14,12 @@ $disabled-date-text-color:		#ede8e8;
 	position:fixed;
   	z-index:51;
   	transition:all linear 0.5s;
-
 	&.show{
-	   -webkit-animation: fadeInDown 1s cubic-bezier(.06,.61,.04,1.03);
+	   -webkit-animation: scaleUpCal 1s cubic-bezier(.06,.61,.04,1.03);
 	   animation: scaleUpCal 1s cubic-bezier(.06,.61,.04,1.03);   
 	}
 	&.hide{
-	   -webkit-animation: fadeInDown 1s cubic-bezier(.06,.61,.04,1.03);
+	   -webkit-animation: scaleDownCal 1s cubic-bezier(.06,.61,.04,1.03);
 	   animation: scaleDownCal 1s cubic-bezier(.06,.61,.04,1.03);   
 	}  	
 }
@@ -268,199 +267,4 @@ $disabled-date-text-color:		#ede8e8;
 			}
 		}
 	}	
-}
-
-
-
-/* .gj-calender-container{
-	height : $container-height;
-	width:  $container-width;
-	display:block;
-	position:fixed;
-  	z-index:9999;
-}
-
-.calender-body {
-	width:  100%;
-	height: 100%;
-	background-color: $calender-bg;
-}
-
-.calender-body table{
-	width:  100%;
-	height: 100%;
-}
-
-.calender-body table td{
-	outline:none;
-	text-align:center;
-}
-
-
-.today{
-	border:1px solid blue;
-}
-
-.gj-calendar-selected-date{
-	background-color:blue;
-
-}
-
-.gj-calender-container.ng-hide-remove{
-	animation:0.5s fadeInDown ease;	
-}
-
-.gj-calender-container.ng-hide {
-  animation:0.5s fadeOut ease;
-  line-height: 0;
-  opacity: 0;
-  padding: 0 10px;
-}
-
-.gj-picker-month td {
-	text-align:center;
-	height:50px;
-	padding:3px;
-	margin: 3px;
-}
-
-.gj-picker-month td a{
-	text-decoration:none;
-}
-.gj-picker-month td:hover {
-	background-color:#E0E1E2;
-	color:white;
-}
-
-
-.gj-picker-year.ng-hide-remove{
-	animation:0.5s zoomIn ease;	
-}
-
-.gj-picker-date.ng-hide-remove {
-	animation:0.5s zoomIn ease;	
-}
-
-.gj-picker-month.ng-hide-remove{
-	animation:0.5s zoomIn ease;	
-}
-
-.gj-picker-hour.ng-hide-remove{
-	animation:0.5s zoomIn ease;	
-}
-
-.gj-picker-minute.ng-hide-remove{
-	animation:0.5s zoomIn ease;	
-}
-
-.gj-calender-container.hide {
-  display: none;
-  opacity: 0;
-  -webkit-animation: display-none-transition 1s;
-  animation: display-none-transition 1s;
-}
-
-@-webkit-keyframes display-none-transition {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes display-none-transition {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-} */
-
-@-webkit-keyframes scaleUpCal {
-    0%   {
-    	-ms-transform: scale(.5,.5); /* IE 9 */
-    	-webkit-transform: scale(.5,.5); /* Safari */
-    	transform: scale(.5,.5);
-	}
-
-    100% {
-    	-ms-transform: scale(1,1); /* IE 9 */
-    	-webkit-transform: scale(1,1); /* Safari */
-    	transform: scale(1,1);   	
-    }
-} 
-
-/* Standard syntax */ 
-@keyframes scaleUpCal {
-    0%   {
-    	-ms-transform: scale(.5,.5); /* IE 9 */
-    	-webkit-transform: scale(.5,.5); /* Safari */
-    	transform: scale(.5,.5);
-	}
-
-    100% {
-    	-ms-transform: scale(1,1); /* IE 9 */
-    	-webkit-transform: scale(1,1); /* Safari */
-    	transform: scale(1,1);   	
-    }
-}
-
-@-webkit-keyframes scaleDownCal {
-    0%   {
-    	-ms-transform: scale(1,1); /* IE 9 */
-    	-webkit-transform: scale(1,1); /* Safari */
-    	transform: scale(1,1);   	
-	}
-
-    100% {
-    	-ms-transform: scale(.5,.5); /* IE 9 */
-    	-webkit-transform: scale(.5,.5); /* Safari */
-    	transform: scale(.5,.5);
-    }
-} 
-
-/* Standard syntax */ 
-@keyframes scaleDownCal {
-    0%   {
-    	-ms-transform: scale(1,1); /* IE 9 */
-    	-webkit-transform: scale(1,1); /* Safari */
-    	transform: scale(1,1);   	
-	}
-
-    100% {
-    	-ms-transform: scale(.5,.5); /* IE 9 */
-    	-webkit-transform: scale(.5,.5); /* Safari */
-    	transform: scale(.5,.5);
-    }
-}
-
-@-webkit-keyframes moveUp {
-    0%   {
-    	-ms-transform: top; /* IE 9 */
-    	-webkit-transform: top; /* Safari */
-    	transform: top;
-	}
-
-    100% {
-    	-ms-transform: top; /* IE 9 */
-    	-webkit-transform: top; /* Safari */
-    	transform: top;   	
-    }
-} 
-
-/* Standard syntax */ 
-@keyframes moveUp {
-    0%   {
-    	-ms-transform: top; /* IE 9 */
-    	-webkit-transform: top; /* Safari */
-    	transform: top;
-	}
-
-    100% {
-    	-ms-transform: top; /* IE 9 */
-    	-webkit-transform: top; /* Safari */
-    	transform: top;   	
-    }
 }
